--- a/app/globals.css
+++ b/app/globals.css
@@ -16,38 +16,21 @@
   }
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+.class {
+  font-family: var(--font-poppins);
 }
 
-@import url('https://fonts.googleapis.com/css?family=Shanti:700|Plus%20Jakarta%20Sans:400');
-
-body {
-  font-family: 'Plus Jakarta Sans';
-  font-weight: 400;
+.card-zoom {
+  @apply relative flex items-center justify-center overflow-hidden w-60 h-60 rounded-3xl;
 }
 
-h1, h2, h3, h4, h5 {
-  font-family: 'Shanti';
-  font-weight: 700;
+.card-zoom-image {
+  @apply absolute w-full h-full transition-all duration-500 ease-in-out transform bg-center bg-cover;
 }
 
-html {font-size: 100%;} /* 16px */
-
-h1 {font-size: 4.210rem; /* 67.36px */}
-
-h2 {font-size: 3.158rem; /* 50.56px */}
-
-h3 {font-size: 2.369rem; /* 37.92px */}
-
-h4 {font-size: 1.777rem; /* 28.48px */}
-
-h5 {font-size: 1.333rem; /* 21.28px */}
-
-small {font-size: 0.750rem; /* 12px */}
+.card-zoom:hover .card-zoom-image {
+  @apply scale-125;
+}
+.card-zoom:hover .card-zoom-text {
+  @apply scale-100;
+}
